# eu-terminal-apps

./: .gitignore  CMakeLists.txt  README.md
docs/architecture/intro-c4-context-container-diagrams/: workspace.dsl
docs/architecture/intro-c4-diagrams/c4-notation/: workspace.dsl
docs/architecture/intro-c4-diagrams/container-few-apps/: workspace.dsl
docs/architecture/intro-c4-diagrams/container-many-apps/: workspace.dsl
docs/architecture/intro-c4-diagrams/container-single-app/: workspace.dsl
docs/architecture/intro-c4-diagrams/context-harvester-terminal/: workspace.dsl
docs/architecture/intro-c4-diagrams/getting-started/: workspace.dsl
eu-business-logic/: CMakeLists.txt
eu-business-logic/EmUse/Models/: CMakeLists.txt  business_logic.cpp  business_logic.h  business_logic_coordinator.cpp  business_logic_coordinator.h  main_model.cpp  main_model.h  quantity_object.cpp  quantity_object.h
eu-business-logic/EmUse/Models/private/: business_logic_singleton.cpp  business_logic_singleton.h
eu-business-logic/tests/: CMakeLists.txt
eu-business-logic/tests/main_model/: CMakeLists.txt  fake_engine_twin.cpp  fake_engine_twin.h  test_main_model.cpp
eu-machine-comms/: CMakeLists.txt
eu-machine-comms/src/: CMakeLists.txt  can_bus_simulator.cpp  engine_twin.cpp  engine_twin.h  machine_comms_coordinator.cpp  machine_comms_coordinator.h  machine_coordinator.h  quantity.cpp  quantity.h
eu-machine-comms/src/private/: can_bus_simulator.cpp  can_bus_simulator.h
eu-machine-comms/tests/: CMakeLists.txt
eu-machine-comms/tests/engine_twin/: CMakeLists.txt  fake_can_bus_device.cpp  fake_can_bus_device.h  fake_can_bus_router.cpp  fake_can_bus_router.h  test_engine_twin.cpp
eu-machine/src/: CMakeLists.txt  abstract_engine_twin.h  engine_twin.cpp  engine_twin.h  machine.cpp  machine.h  machine_coordinator.cpp  machine_creator.cpp  machine_creator.h  quantity.cpp  quantity.h  quantity_object.cpp  quantity_object.h
eu-machine/src/private/: can_bus_router.cpp  can_bus_router.h  can_bus_simulator.cpp  can_bus_simulator.h  engine_twin_impl.cpp  engine_twin_impl.h  mock_can_bus_device.cpp  mock_can_bus_device.h  mock_machine.cpp  mock_machine.h  quantity.cpp  quantity.h  simulator_machine.cpp  simulator_machine.h
eu-machine/tests/: CMakeLists.txt
eu-machine/tests/can_bus_device/: CMakeLists.txt  mock_can_bus_device.cpp  mock_can_bus_device.h  test_can_bus_device.cpp
eu-machine/tests/can_bus_router/: CMakeLists.txt  test_can_bus_router.cpp
eu-machine/tests/doubles/: mock_can_bus_device.cpp  mock_can_bus_device.h
eu-machine/tests/engine_twin/: CMakeLists.txt  fake_can_bus_device.cpp  fake_can_bus_device.h  fake_engine_twin.cpp  mock_can_bus_device.h  test_engine_twin.cpp
eu-machine/tests/quantity_object/: CMakeLists.txt  test_quantity_object.cpp
eu-main-app/: CMakeLists.txt  eu-main-app_de_DE.ts  main.cpp
eu-main-app/src/: CMakeLists.txt  MainView.qml  main.cpp  main.qml
eu-main-app/system-tests/: CMakeLists.txt
eu-main-app/system-tests/main_view/: CMakeLists.txt  test_main_view.cpp
eu-main-app/tests/: CMakeLists.txt
eu-main-app/tests/main_view/: CMakeLists.txt  fake_main_model.h  test_main_view.cpp  test_main_view.qml
eu-main-app/unit-tests/: CMakeLists.txt
eu-main-app/unit-tests/main_view/: CMakeLists.txt  fake_main_model.cpp  test_main_view.cpp  tst_main_view.qml
eu-terminal-core/: CMakeLists.txt
eu-terminal-core/BusinessLogic/Models/: CMakeLists.txt  business_logic_coordinator.cpp  quantity_object.cpp
eu-terminal-core/TerminalCore/Models/: CMakeLists.txt  business_logic_coordinator.h  business_logic_singleton.cpp  business_logic_singleton.h  terminal_core_coordinator.cpp  terminal_core_coordinator.h  terminal_core_singleton.cpp  terminal_core_singleton.h
eu-terminal-core/src/: CMakeLists.txt  main_model.cpp  main_model.h  quantity_object.cpp  quantity_object.h  terminal_core_coordinator.cpp  terminal_core_coordinator.h
eu-terminal-core/tests/: CMakeLists.txt
eu-terminal-core/tests/main_model/: CMakeLists.txt  fake_engine_twin.cpp  test_main_model.cpp
